Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,51 +4,50 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Study Notes by Steve by luzhi</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-      <header>
-        <h1>Study Notes by Steve</h1>
-        <p>Study Notes on GitHub.io</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/luzhi" class="button fork"><strong>View On GitHub</strong></a>
-      </div><!-- end banner -->
-
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
+      <header>
+        <h1 class="header">Study Notes by Steve</h1>
+        <p class="header">Study Notes on GitHub.io</p>
+
+
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/luzhi">GitHub Profile</a></li>
+        </ul>
+
+      </header>
       <section>
-        <p>I am going to write down the knowledge I learned about Deep Learning.</p>
+        <p><em>This page is keeping to update as my study on Deep Learning techniques.</em></p>
 
 <h2>
-<a id="list-of-recurrent-neural-networks" class="anchor" href="#list-of-recurrent-neural-networks" aria-hidden="true"><span class="octicon octicon-link"></span></a>List of Recurrent Neural Networks</h2>
+<a id="list-of-recurrent-neural-networks-rnn" class="anchor" href="#list-of-recurrent-neural-networks-rnn" aria-hidden="true"><span class="octicon octicon-link"></span></a>List of Recurrent Neural Networks (RNN)</h2>
 
 <h3>
-<a id="lstm" class="anchor" href="#lstm" aria-hidden="true"><span class="octicon octicon-link"></span></a>LSTM</h3>
+<a id="lstms" class="anchor" href="#lstms" aria-hidden="true"><span class="octicon octicon-link"></span></a>LSTMs</h3>
 
 <ol>
 <li><a href="http://colah.github.io/posts/2015-08-Understanding-LSTMs/">Understanding LSTM Networks</a></li>
 </ol>
+
+<blockquote>
+<p>This blog is pretty good for beginners to learn the Long Short-Term Memory Networks (LSTMs), which is a famous type of RNN. There is little mathematics except for couple of basic equations for the gates and layers. In addition, in the end of this article, it provides couple of most recent papers using LSTMs, which are really worth to read.</p>
+</blockquote>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+		
   </body>
 </html>
