--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Study Notes by Steve by luzhi</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Study Notes by Steve</h1>
-        <p class="header">Study Notes on GitHub.io</p>
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
+  <title>Study Notes by Steve</title>
+  <meta name="description" content="Learning Notes on Deep Learning Techniques">
 
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <ul>
-          <li><a class="buttons github" href="https://github.com/luzhi">GitHub Profile</a></li>
-        </ul>
+</head>
 
-      </header>
-      <section>
-        <p><em>This page is keeping to update as my study on Deep Learning techniques.</em></p>
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Study Notes by Steve</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Learning Notes on Deep Learning Techniques</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/luzhi" class="code">View Study Notes by Steve on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p><em>This page is keeping to update as my study on Deep Learning techniques.</em></p>
 
 <h2>
 <a id="list-of-recurrent-neural-networks-rnn" class="anchor" href="#list-of-recurrent-neural-networks-rnn" aria-hidden="true"><span class="octicon octicon-link"></span></a>List of Recurrent Neural Networks (RNN)</h2>
@@ -36,18 +43,32 @@
 <a id="lstms" class="anchor" href="#lstms" aria-hidden="true"><span class="octicon octicon-link"></span></a>LSTMs</h3>
 
 <ol>
-<li><a href="http://colah.github.io/posts/2015-08-Understanding-LSTMs/">Understanding LSTM Networks</a></li>
+<li><strong><a href="http://colah.github.io/posts/2015-08-Understanding-LSTMs/">Understanding LSTM Networks</a></strong></li>
 </ol>
 
 <blockquote>
 <p>This blog is pretty good for beginners to learn the Long Short-Term Memory Networks (LSTMs), which is a famous type of RNN. There is little mathematics except for couple of basic equations for the gates and layers. In addition, in the end of this article, it provides couple of most recent papers using LSTMs, which are really worth to read.</p>
 </blockquote>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+        </article>
+      </div>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
+    <footer>
+      <div class="owner">
+
+      <p><a href="https://github.com/luzhi" class="avatar"><img src="https://avatars0.githubusercontent.com/u/1143602?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/luzhi">luzhi</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/luzhi/luzhi.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/luzhi/luzhi.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
